fix(ui): alignment of buttons in a dialog

--- a/src/app/shared/dialogs/products-array/products-array-dialog.component.css
+++ b/src/app/shared/dialogs/products-array/products-array-dialog.component.css
@@ -33,3 +33,8 @@ h2 {
 mat-expansion-panel, mat-card {
   margin: 1rem 0;
 }
+
+.actions {
+  display: flex;
+  justify-content: space-around;
+}
